feat: make a functioning Map on init